# finance-manager-cpp

./: CMakeLists.txt  README.md
include/: FinanceManager.h  Transaction.h  Wallet.h
src/: FinanceManager.cpp  Transaction.cpp  Wallet.cpp  main.cpp
